--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
     "react-native-mmkv-storage": "^0.9.1",
     "react-native-safe-area-context": "4.8.2",
