--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-mmkv-storage": "^0.9.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
