--- a/ios/Pokebuilder.xcodeproj/xcshareddata/xcschemes/Pokebuilder.xcscheme
+++ b/ios/Pokebuilder.xcodeproj/xcshareddata/xcschemes/Pokebuilder.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "teamnotes.app"
-               BlueprintName = "teamnotes"
-               ReferencedContainer = "container:teamnotes.xcodeproj">
+               BuildableName = "Pokebuilder.app"
+               BlueprintName = "Pokebuilder"
+               ReferencedContainer = "container:Pokebuilder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "teamnotesTests.xctest"
-               BlueprintName = "teamnotesTests"
-               ReferencedContainer = "container:teamnotes.xcodeproj">
+               BuildableName = "PokebuilderTests.xctest"
+               BlueprintName = "PokebuilderTests"
+               ReferencedContainer = "container:Pokebuilder.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "teamnotes.app"
-            BlueprintName = "teamnotes"
-            ReferencedContainer = "container:teamnotes.xcodeproj">
+            BuildableName = "Pokebuilder.app"
+            BlueprintName = "Pokebuilder"
+            ReferencedContainer = "container:Pokebuilder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "teamnotes.app"
-            BlueprintName = "teamnotes"
-            ReferencedContainer = "container:teamnotes.xcodeproj">
+            BuildableName = "Pokebuilder.app"
+            BlueprintName = "Pokebuilder"
+            ReferencedContainer = "container:Pokebuilder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
