--- a/ios/Pokebuilder/Info.plist
+++ b/ios/Pokebuilder/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>team-notes</string>
+    <string>Pokebuilder</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,8 +27,8 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>myapp</string>
-          <string>com.anonymous.teamnotes</string>
+          <string>pokebuilder</string>
+          <string>com.raycasting.pokebuilder</string>
         </array>
       </dict>
     </array>
